Att flex direct

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <h1 class="header">Desafio</h1>
-    <div class="base1 desafio box5">
+    <div class="desafio desafio box5">
         <div class="flex-item box1"><h1>1</h1></div>
         <div class="flex-item box2"><h1>2</h1></div>
         <div class="flex-item box3"><h1>3</h1></div>
